--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@fontsource/noto-sans-kr": "^5.1.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
