--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@fontsource/noto-sans-kr": "^5.1.0",
+    "classnames": "^2.5.1",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
@@ -32,6 +33,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "eslint-plugin-storybook": "^0.9.0",
+    "sass": "^1.79.4",
     "storybook": "^8.3.4",
     "typescript": "^5"
   }
